--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -20,8 +20,17 @@
     line-height: 15px;
   }
 }
-/*
+
 .form__input_type_error {
   border-bottom-color: 1px solid rgba(255, 0, 0, 1);
 }
-  */
+
+.form__input-error_active {
+  color: rgba(255, 0, 0, 1);
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 100%;
+}
+
+  
