--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -4,9 +4,14 @@
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
+  background-image: url('../../../images/avatar.jpg');
   background-size: cover;
   background-position: center;
   margin: 0 29px 0 0;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media screen and (max-width: 740px) {
@@ -19,4 +24,37 @@
   .profile__image {
     margin-right: 0;
   }
+}
+
+.profile__image::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 120px;
+  height: 120px;
+  background-color: rgba(0, 0, 0, 0.8);
+  background-position: center;
+  background-size: cover;
+  opacity: 0;
+  transition: opacity 0.3s;
+  z-index: 2;
+}
+
+.profile__image:hover::after {
+  opacity:1;
+}
+
+.overlay-image {
+  width: 26px;
+  height: 26px;
+  opacity: 0;
+  transition: opacity 0.3s;
+  position: absolute;
+  z-index: 3;
+}
+
+.profile__image:hover .overlay-image {
+  opacity: 1;
 }
